# ns3-datacenter

simulator/ns-3.39/: CMakeLists.txt
simulator/ns-3.39/build-support/: cmake-format-modules.yaml  cmake-format.yaml  macros-and-definitions.cmake
simulator/ns-3.39/experiments/: CMakeLists.txt
simulator/ns-3.39/experiments/routing/: CMakeLists.txt  Fattree_10  Fattree_20  Fattree_30  Fattree_4  Fattree_40  Fattree_50  Fattree_6  Fattree_8  fattree-with-global-routing.cc  fattree_routing_compare.py  gen_Fattree_topo.py
